option toggles, results

--- a/debuggerApp/templates/index.html
+++ b/debuggerApp/templates/index.html
@@ -9,6 +9,21 @@
     <form method="POST" action="/">
       <label for="uri">URI:</label>
       <input type="text" id="uri" name="uri" required>
+      <br><br>
+
+      <!-- Toggle options -->
+      <label for="option1">Process internal records only?</label>
+      <input type="checkbox" id="option1" name="option1" value="on">
+      <br><br>
+
+      <label for="option2">Process URI equivalents only?</label>
+      <input type="checkbox" id="option2" name="option2" value="on">
+      <br><br>
+
+      <label for="option3">Run name reconciliation?</label>
+      <input type="checkbox" id="option3" name="option3" value="on">
+      <br><br>
+
       <input type="submit" value="Submit">
     </form>
   </body>
