--- a/debuggerApp/templates/index.html
+++ b/debuggerApp/templates/index.html
@@ -16,7 +16,7 @@
       <input type="checkbox" id="option1" name="option1" value="on">
       <br><br>
 
-      <label for="option2">Process URI equivalents only?</label>
+      <label for="option2">Process URI equivalents?</label>
       <input type="checkbox" id="option2" name="option2" value="on">
       <br><br>
 
