make input boxes smaller

--- a/debuggerApp/templates/index.html
+++ b/debuggerApp/templates/index.html
@@ -30,8 +30,12 @@
       .control {
         margin-bottom: 15px;
       }
+      .input, .button {
+        max-width: 300px; /* Adjusts the width of input and button */
+        margin: 0 auto;   /* Centers the input and button */
+      }
       .button {
-        width: 100%;
+        display: block;
         margin-top: 20px;
       }
     </style>
