reduce container size

--- a/debuggerApp/templates/index.html
+++ b/debuggerApp/templates/index.html
@@ -12,10 +12,10 @@
         font-family: 'Arial', sans-serif;
       }
       .container {
-        max-width: 600px;
+        max-width: 400px;
         margin: 50px auto;
         background: white;
-        padding: 30px;
+        padding: 20px;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
         border-radius: 10px;
       }
@@ -31,8 +31,8 @@
         margin-bottom: 15px;
       }
       .input, .button {
-        max-width: 300px; /* Adjusts the width of input and button */
-        margin: 0 auto;   /* Centers the input and button */
+        max-width: 300px; 
+        margin: 0 auto;   
       }
       .button {
         display: block;
@@ -42,7 +42,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="title">Enter a URI</h1>
+      <h1 class="title">Enter a LUX URI for equivalent debugging:</h1>
       <form method="POST" action="/">
         <!-- URI Input -->
         <div class="field">
