--- a/debuggerApp/templates/index.html
+++ b/debuggerApp/templates/index.html
@@ -21,7 +21,7 @@
       }
       h1 {
         color: #333;
-        text-align: center;
+/*        text-align: center;*/
         margin-bottom: 20px;
       }
       label {
@@ -42,7 +42,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="title">Enter a LUX URI for equivalent debugging:</h1>
+      <h1 class="title">Enter a LUX URI for equivalent debugging</h1>
       <form method="POST" action="/">
         <!-- URI Input -->
         <div class="field">
