--- a/debuggerApp/templates/index.html
+++ b/debuggerApp/templates/index.html
@@ -42,7 +42,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="title">Enter a LUX URI for equivalent debugging</h1>
+      <h1 class="title">Enter a LUX URI to debug its equivalents:</h1>
       <form method="POST" action="/">
         <!-- URI Input -->
         <div class="field">
