--- a/debuggerApp/templates/index.html
+++ b/debuggerApp/templates/index.html
@@ -57,7 +57,7 @@
           <div class="control">
             <label class="checkbox" for="option1">
               <input type="checkbox" id="option1" name="option1" value="on">
-              Process internal records only?
+              Process internal equivalents only?
             </label>
           </div>
         </div>
@@ -66,7 +66,7 @@
           <div class="control">
             <label class="checkbox" for="option2">
               <input type="checkbox" id="option2" name="option2" value="on">
-              Run name reconciliation?
+              Run name reconciliation on equivalents?
             </label>
           </div>
         </div>
