--- a/debuggerApp/templates/add_to_sheet.html
+++ b/debuggerApp/templates/add_to_sheet.html
@@ -11,25 +11,25 @@
             font-family: 'Arial', sans-serif;
         }
         .container {
-            max-width: 800px;
+            max-width: 400px;
             margin: 50px auto;
             background: white;
-            padding: 40px;
+            padding: 20px;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
         }
         h1 {
             text-align: center;
             color: #333;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
         }
         .message {
             font-size: 1.2em;
-            color: #4caf50; /* Success message color */
+            color: #32b611; /* Success message color */
         }
         .button {
             display: block;
-            width: 100%;
+            width: 50%;
             margin-top: 20px;
         }
     </style>
