--- a/debuggerApp/templates/add_to_sheet.html
+++ b/debuggerApp/templates/add_to_sheet.html
@@ -32,10 +32,12 @@
         }
         .small-button {
             display: block;
-            width: auto; /* Allow button to be smaller */
-            font-size: 0.8em; /* Smaller text size */
-            padding: 5px 10px; /* Smaller padding for the button */
-            margin: 20px auto; /* Center-align the button */
+            width: fit-content; 
+            font-size: 1.2em; 
+            padding: 5px 10px; 
+            margin: 20px auto; 
+            height: auto;
+            line-height: 1;
         }
     </style>
 </head>
