--- a/debuggerApp/templates/add_to_sheet.html
+++ b/debuggerApp/templates/add_to_sheet.html
@@ -33,6 +33,9 @@
         .button {
             display: block;
             margin: 20px auto;
+            padding: 5px 10px;
+            width: fit-content;
+            height: auto;
         }
     </style>
 </head>
