indent equivalents list

--- a/debuggerApp/templates/result.html
+++ b/debuggerApp/templates/result.html
@@ -29,6 +29,7 @@
         .equivalents-list {
             list-style-type: none;
             margin-left: 0;
+            padding-left: 20px
         }
         .equivalents-list li {
             margin-bottom: 10px;
