indent no equivs message

--- a/debuggerApp/templates/result.html
+++ b/debuggerApp/templates/result.html
@@ -37,6 +37,7 @@
         .no-equivalents {
             color: #888;
             font-style: italic;
+            padding-left: 20px
         }
         .reconciliation-flag {
             color: #d9534f;
