--- a/debuggerApp/templates/index.html
+++ b/debuggerApp/templates/index.html
@@ -66,6 +66,15 @@
           <div class="control">
             <label class="checkbox" for="option2">
               <input type="checkbox" id="option2" name="option2" value="on">
+              Process external equivalents only?
+            </label>
+          </div>
+        </div>
+
+        <div class="field">
+          <div class="control">
+            <label class="checkbox" for="option3">
+              <input type="checkbox" id="option3" name="option3" value="on">
               Run name reconciliation on equivalents?
             </label>
           </div>
