--- a/debuggerApp/templates/result.html
+++ b/debuggerApp/templates/result.html
@@ -64,7 +64,7 @@
                         {% endif %}
                         <div class="field">
                             <label class="checkbox">
-                                <input type="checkbox" name="same_as_for_{{ loop.index }}">
+                                <input type="checkbox" name="same_as">
                                 <strong>Add to Same As Sheet?</strong>
                             </label>
                         </div>
